# COMP3931-Individual_Project

./: CMakeLists.txt  README.md
assets/: Scratachpixel.txt
source/: AsciiTriangles.cpp  FinalScene.cpp  HelloEmbree.cpp  Main.cpp  MeshObject.cpp  MeshObject.hpp  MugScene.cpp  OBJLoader.cpp  OBJLoader.hpp  PPMWriter.cpp  PPMWriter.hpp  PointLight.cpp  PointLight.hpp  RenderManager.cpp  RenderManager.hpp
source/IOManagers/: MeshGeometry.cpp  MeshGeometry.hpp  PPMWriter.cpp  PPMWriter.hpp
source/Renderer/: PhotonMapper.cpp  PhotonMapper.hpp  PointLight.cpp  PointLight.hpp  RenderManager.cpp  RenderManager.hpp
